# pact

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE_TEMPLATE  README.md
.circleci/: config.yml
design/: pact-overview.drawio
design/bytecode/: README.md
design/interpreter/: README.md  pact-interpreter-state-machine.drawio
design/pact/: README.md  codec.md  transactions.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: contract_v0_fuzz.rs
src/: lib.rs
src/compiler/: data_table.rs  mod.rs
src/contract/: data_table.rs  mod.rs
src/interpreter/: mod.rs  type_cast.rs  types.rs
src/parser/: ast.rs  grammar.pest  mod.rs
src/types/: base.rs  contract.rs  data_table.rs  mod.rs  opcode.rs  type_cast.rs
tests/: codec_integration.rs  compiler_integration.rs  interpreter_integration.rs  parser_integration.rs
